minor css changes in blog content

--- a/blogs/salon-makeup-vs-diy-makeup.html
+++ b/blogs/salon-makeup-vs-diy-makeup.html
@@ -172,7 +172,7 @@
                             tempting. But when it really matters—events, weddings, parties, photoshoots—professional
                             salon makeup and DIY makeup are not the same game.
                         </p>
-                        <p class="paragraph medium-paragraph margin-bottom-40px">
+                        <p class="paragraph large-paragraph margin-bottom-40px">
                             Here’s why professional makeup always stands apart.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
@@ -187,7 +187,8 @@
                             <div class="title-block padding-left-right-60">
                                 <h2 class="heading h4 margin-bottom-20px">1. Skill, Technique & Face Analysis</h2>
 
-                                <h3 class="heading h5">A professional makeup artist doesn’t just apply products—we study
+                                <h3 class="paragraph large-paragraph">A professional makeup artist doesn’t just apply
+                                    products—we study
                                     your face.</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Face shape, skin type & undertone</li>
@@ -201,7 +202,8 @@
                                 <h2 class="heading h4 margin-bottom-20px">2. Professional Products Make a Huge
                                     Difference</h2>
 
-                                <h3 class="heading h5">Salon makeup uses high-grade, professional products that:</h3>
+                                <h3 class="paragraph large-paragraph">Salon makeup uses high-grade, professional
+                                    products that:</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Last longer (8–12+ hours)</li>
                                     <li>Don’t oxidize or turn patchy</li>
@@ -216,7 +218,7 @@
                                 <p class="paragraph small-paragraph margin-bottom-20px">
                                     Blending is everything.
                                 </p>
-                                <h3 class="heading h5">Professional artists use:</h3>
+                                <h3 class="paragraph large-paragraph">Professional artists use:</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Advanced blending techniques</li>
                                     <li>Correct brush types & tools</li>
@@ -236,7 +238,7 @@
                                 <p class="paragraph small-paragraph margin-bottom-20px">
                                     Events are long. Emotions, sweat, lighting, dancing—all test your makeup.
                                 </p>
-                                <h3 class="heading h5">Professional makeup:</h3>
+                                <h3 class="paragraph large-paragraph">Professional makeup:</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Stays intact without constant touch-ups</li>
                                     <li>Handles humidity and heat better</li>
@@ -249,7 +251,7 @@
                                 <p class="paragraph small-paragraph margin-bottom-20px">
                                     What looks fine in the mirror may look washed out or cakey on camera.
                                 </p>
-                                <h3 class="heading h5">Professionals understand:</h3>
+                                <h3 class="paragraph large-paragraph">Professionals understand:</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Flashback control</li>
                                     <li>Proper contour depth</li>
@@ -259,7 +261,7 @@
                                     That’s why salon makeup photographs beautifully—especially for weddings and parties.
                                 </p>
                                 <h2 class="heading h4 margin-bottom-20px">6. Hygiene & Skin Safety</h2>
-                                <h3 class="heading h5">Salon artists follow:</h3>
+                                <h3 class="paragraph large-paragraph">Salon artists follow:</h3>
                                 <ul class="paragraph small-paragraph">
                                     <li>Brush sanitization</li>
                                     <li>Clean tools for every client</li>
@@ -291,7 +293,7 @@
                                 <p class="paragraph small-paragraph margin-bottom-20px">
                                     DIY makeup is practice.<br>Professional salon makeup is an experience—and a result.
                                 </p>
-                                <p class="paragraph small-paragraph margin-bottom-40px">
+                                <p class="paragraph medium-paragraph margin-bottom-40px">
                                     When the occasion matters, photos last forever, and confidence is
                                     non-negotiable—professional makeup makes the real difference.
                                 </p>
