--- a/services.html
+++ b/services.html
@@ -393,7 +393,8 @@
                                         </div>
                                         <div class="menu-item-wrap">
                                             <div class="menu-line-item-wrap">
-                                                <h4 class="menu-item-2"><a href="/services/botox-treatment.html"
+                                                <h4 class="menu-item-2"><a
+                                                        href="/services/hair-botox-treatment-hennur-road-bangalore"
                                                         class="menu-section-link">
                                                         Botox / Plastia Treatment</a></h4>
                                                 <div class="menu-line"></div>
@@ -1549,8 +1550,8 @@
                             href="/contact" class="footer-link">Contact Us</a>
                     </div>
                     <div class="footer-block-two"><a class="footer-link">Popular Services</a>
-                        <a href="/services/botox-treatment.html" class="footer-link-2">Botox Treatment</a><a
-                            href="/services/keratin-treatment.html" class="footer-link-2">Keratin
+                        <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
+                            Treatment</a><a href="/services/keratin-treatment.html" class="footer-link-2">Keratin
                             Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut &
                             Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
                             MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
