minor css changes on services page

--- a/services/hair-botox-treatment-hennur-road-bangalore.html
+++ b/services/hair-botox-treatment-hennur-road-bangalore.html
@@ -161,11 +161,11 @@
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4 margin-bottom-20px">What Is Hair Botox Treatment?</h2>
+                                <h2 class="heading h4">What Is Hair Botox Treatment?</h2>
                                 <div class="paragraph medium-paragraph">Hair Botox is a non-chemical hair rejuvenation
                                     treatment enriched with proteins, vitamins, amino acids, and nourishing oils. It
                                     repairs hair from within and improves softness, shine, and manageability</div>
-                                <h2 class="heading h4 margin-bottom-20px">Benefits of Hair Botox</h2>
+                                <h2 class="heading h4">Benefits of Hair Botox</h2>
                                 <ul class="paragraph medium-paragraph">
                                     <li>Visible reduction in frizz</li>
                                     <li>Deep hydration for dry hair</li>
@@ -173,14 +173,14 @@
                                     <li>Repairs damage from heat & colouring</li>
                                     <li>Safe for coloured and chemically treated hair</li>
                                 </ul>
-                                <h2 class="heading h4 margin-bottom-20px">Who Should Get Hair Botox?</h2>
+                                <h2 class="heading h4">Who Should Get Hair Botox?</h2>
                                 <ul class="paragraph medium-paragraph">
                                     <li>People with frizzy or rough hair</li>
                                     <li>Dry, dull, or lifeless hair</li>
                                     <li>Hair damaged due to colouring or styling</li>
                                     <li>Those wanting smooth hair without straightening</li>
                                 </ul>
-                                <h2 class="heading h4 margin-bottom-20px">Hair Botox Treatment Process</h2>
+                                <h2 class="heading h4">Hair Botox Treatment Process</h2>
                                 <ul class="paragraph medium-paragraph">
                                     <li>Step 1: Hair cleansing</li>
                                     <li>Step 2: Hair Botox application</li>
@@ -196,7 +196,7 @@
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4 margin-bottom-20px">Hair Botox vs Keratin</h2>
+                                <h2 class="heading h4">Hair Botox vs Keratin</h2>
                                 <div class="paragraph medium-paragraph">Hair Botox focuses on repair and hydration,
                                     while keratin is a straightening treatment. If you want natural-looking smooth hair
                                     without chemicals, Hair Botox is ideal. <a href="/blogs/keratin-vs-hair-botox"
@@ -204,14 +204,14 @@
                                         more about Keratin vs Botox
                                         Treatment
                                         for hair.</a></div>
-                                <h2 class="heading h4 margin-bottom-20px">Aftercare Tips</h2>
+                                <h2 class="heading h4">Aftercare Tips</h2>
                                 <ul class="paragraph medium-paragraph">
                                     <li>Use sulphate-free shampoo. Preferably for Botox / Keratin aftercare.</li>
                                     <li>Avoid excessive heat styling</li>
                                     <li>Avoid excessive oiling</li>
                                     <li>Follow stylist-recommended products</li>
                                 </ul>
-                                <h2 class="heading h4 margin-bottom-20px">FAQs – Hair Botox in Hennur Road</h2>
+                                <h2 class="heading h4">FAQs – Hair Botox in Hennur Road</h2>
                                 <h3 class="paragraph large-paragraph">Is Hair Botox safe for all hair types?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
                                     Yes, it’s safe and suitable for most hair types, including coloured hair.
@@ -237,13 +237,13 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4 margin-bottom-20px">Book Hair Botox Treatment in Hennur Road</h2>
+                                <h2 class="heading h4">Book Hair Botox Treatment in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
                                     Visit our salon near Hennur Road, Bangalore for professional Hair Botox Treatment
                                     and experience smoother, healthier hair.
                                 </p>
                                 <div class="align-button-center">
-                                    <!-- <div class="heading h4 margin-bottom-20px">Ready to look your absolute best for your
+                                    <!-- <div class="heading h4">Ready to look your absolute best for your
                                         next event? -->
                                 </div><a href="/contact" class="button text-black w-button">Book
                                     Appointment</a>
