--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
               class="footer-link">Contact Us</a></div>
           <div class="footer-block-two"><a class="footer-link">Popular Services</a>
             <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox Treatment</a><a
-              href="/services/keratin-treatment.html" class="footer-link-2">Keratin
+              href="/services/keratin-treatment-hennur-road-bangalore" class="footer-link-2">Keratin
               Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut & Styling</a><a
               href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal MakeUp</a><a
               href="/services/nail-extensions.html" class="footer-link-2">Nails Extensions</a><a
