--- a/services/keratin-treatment-hennur-road-bangalore.html
+++ b/services/keratin-treatment-hennur-road-bangalore.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <title>Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/hair-botox-treatment-hennur-road-bangalore">
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/keratin-treatment-hennur-road-bangalore">
+    <meta content="Get professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair. Ideal for unmanageable and damaged hair.
 " name="description" />
-    <meta content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <meta content="Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair
 " property="og:title" />
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <meta content="Get professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair. Ideal for unmanageable and damaged hair.
 " name="description
 " property="og:description" />
-    <meta content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <meta content="Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair
 " property="twitter:title" />
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <meta content="Get professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair. Ideal for unmanageable and damaged hair.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair" />
+    <meta property="og:image:alt" content="Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -69,19 +69,19 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore",
-      "name": "Hair Botox Treatment in Hennur Road, Bangalore",
-      "description": "Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy and damaged hair.",
+      "@id": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore#webpage",
+      "url": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore",
+      "name": "Keratin Hair Treatment in Hennur Road, Bangalore",
+      "description": "Professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair.",
       "isPartOf": {
         "@id": "https://www.sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#service",
+      "@id": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore#service",
       "name": "Hair Botox Treatment",
-      "description": "A deep conditioning hair repair treatment that restores moisture, smoothness, and shine to damaged and frizzy hair.",
+      "description": "A professional hair smoothening and straightening treatment that reduces frizz and improves manageability.",
       "areaServed": {
         "@type": "Place",
         "name": "Hennur Road, Bangalore"
@@ -93,7 +93,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -105,7 +105,7 @@
           "@type": "ListItem",
           "position": 2,
           "name": "Hair Botox Treatment",
-          "item": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore"
+          "item": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore"
         }
       ]
     }
@@ -144,51 +144,50 @@
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
-                        <h1 class="heading h3 margin-bottom-40px">Hair Botox Treatment in Hennur Road, Bangalore</h1>
+                        <h1 class="heading h3 margin-bottom-40px">Keratin Hair Treatment in Hennur Road, Bangalore</h1>
                         <p class="paragraph medium-paragraph margin-bottom-20px">
-                            Looking for Hair Botox Treatment in Hennur Road, Bangalore? Hair Botox is a
-                            deep-conditioning treatment that restores moisture, repairs damage, and smoothens frizzy
-                            hair without altering your natural texture.
+                            Keratin Hair Treatment is a professional smoothening treatment that reduces frizz,
+                            straightens hair, and restores lost keratin—making hair soft, manageable, and shiny.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-botox-before-after-hennur-road-bangalore.webp"
-                                        alt="Hair botox treatment before and after result showing smooth, frizz-free hair in Hennur Road Bangalore"
+                                        src="/assets/services/keratin-hair-treatment-before-after-hennur-road-bangalore.webp"
+                                        alt="Keratin hair treatment before and after result showing smooth, straight and frizz-free hair in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">What Is Hair Botox Treatment?</h2>
-                                <div class="paragraph medium-paragraph">Hair Botox is a non-chemical hair rejuvenation
-                                    treatment enriched with proteins, vitamins, amino acids, and nourishing oils. It
-                                    repairs hair from within and improves softness, shine, and manageability</div>
-                                <h2 class="heading h4">Benefits of Hair Botox</h2>
+                                <h2 class="heading h4">What Is Keratin Hair Treatment?</h2>
+                                <div class="paragraph medium-paragraph">Keratin treatment replenishes natural keratin
+                                    protein in the hair shaft and seals the cuticle using heat. This helps reduce curls,
+                                    waves, and frizz while improving hair texture and shine.</div>
+                                <h2 class="heading h4">Benefits of Keratin Treatment</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Visible reduction in frizz</li>
-                                    <li>Deep hydration for dry hair</li>
-                                    <li>Improved shine and smoothness</li>
-                                    <li>Repairs damage from heat & colouring</li>
-                                    <li>Safe for coloured and chemically treated hair</li>
+                                    <li>Long-lasting smooth and straight hair</li>
+                                    <li>Reduces frizz and volume</li>
+                                    <li>Makes hair soft and manageable</li>
+                                    <li>Adds shine and polish</li>
+                                    <li>Ideal for thick, curly, or wavy hair</li>
                                 </ul>
-                                <h2 class="heading h4">Who Should Get Hair Botox?</h2>
+                                <h2 class="heading h4">Who Should Opt for Keratin Treatment?</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>People with frizzy or rough hair</li>
-                                    <li>Dry, dull, or lifeless hair</li>
-                                    <li>Hair damaged due to colouring or styling</li>
-                                    <li>Those wanting smooth hair without straightening</li>
+                                    <li>Frizzy or unmanageable hair</li>
+                                    <li>Curly or wavy hair</li>
+                                    <li>Hair damaged by heat or colouring</li>
+                                    <li>Anyone wanting straight-looking hair</li>
                                 </ul>
-                                <h2 class="heading h4">Hair Botox Treatment Process</h2>
+                                <h2 class="heading h4">Keratin Treatment Process</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Step 1: Hair cleansing</li>
-                                    <li>Step 2: Hair Botox application</li>
-                                    <li>Step 3: Heat activation</li>
-                                    <li>Step 4: Rinse & professional blow-dry</li>
+                                    <li>Step 1: Deep cleansing shampoo</li>
+                                    <li>Step 2: Keratin product application</li>
+                                    <li>Step 3: Heat sealing using flat iron</li>
+                                    <li>Step 4: Final rinse and styling</li>
                                 </ul>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Duration: 2-2.5 hours<br>Results last: 3-5 months (with proper home care)
+                                    Duration: 2-3 hours<br>Results last: 5-7 months (with proper home care)
                                 </p>
                             </div>
                         </div>
@@ -196,39 +195,39 @@
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Hair Botox vs Keratin</h2>
-                                <div class="paragraph medium-paragraph">Hair Botox focuses on repair and hydration,
-                                    while keratin is a straightening treatment. If you want natural-looking smooth hair
-                                    without chemicals, Hair Botox is ideal. <a href="/blogs/keratin-vs-hair-botox"
-                                        class="menu-section-link-blogs">Read
+                                <h2 class="heading h4">Keratin vs Hair Botox</h2>
+                                <div class="paragraph medium-paragraph">Keratin is a straightening and smoothing
+                                    treatment, while Hair Botox focuses on repair and hydration.
+                                    Keratin is ideal if you want long-lasting straight hair. <a
+                                        href="/blogs/keratin-vs-hair-botox" class="menu-section-link-blogs">Read
                                         more about Keratin vs Botox
                                         Treatment
                                         for hair.</a></div>
-                                <h2 class="heading h4">Aftercare Tips</h2>
+                                <h2 class="heading h4">Aftercare Tips for Keratin</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Use sulphate-free shampoo. Preferably for Botox / Keratin aftercare.</li>
-                                    <li>Avoid excessive heat styling</li>
-                                    <li>Avoid excessive oiling</li>
+                                    <li>Use sulphate-free shampoo. Preferably for Keratin aftercare.</li>
+                                    <li>Avoid frequent washing</li>
+                                    <li>Limit heat styling</li>
                                     <li>Follow stylist-recommended products</li>
                                 </ul>
-                                <h2 class="heading h4">FAQs – Hair Botox in Hennur Road</h2>
-                                <h3 class="paragraph large-paragraph">Is Hair Botox safe for all hair types?</h3>
+                                <h2 class="heading h4">FAQs – Keratin Treatment in Hennur Road</h2>
+                                <h3 class="paragraph large-paragraph">Is keratin treatment safe?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, it’s safe and suitable for most hair types, including coloured hair.
+                                    Yes, when done professionally and with proper aftercare.
                                 </p>
-                                <h3 class="paragraph large-paragraph">Does Hair Botox straighten hair permanently?</h3>
+                                <h3 class="paragraph large-paragraph">Does keratin permanently straighten hair?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    No, it smoothens and reduces frizz without permanent straightening.
+                                    No, it’s semi-permanent relaxed smooth look and gradually fades.
                                 </p>
-                                <h3 class="paragraph large-paragraph">How long does Hair Botox last?</h3>
+                                <h3 class="paragraph large-paragraph">How long does keratin treatment last?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Results usually last 3–5 months depending on home hair care routine.
+                                    Typically 3–6 months depending on hair care routine.
                                 </p>
                             </div>
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-botox-treatment-process-salon-hennur-road.webp"
-                                        alt="Hair botox treatment process being applied at salon in Hennur Road Bangalore"
+                                        src="/assets/services/keratin-treatment-process-flat-iron-hennur-road-bangalore.webp"
+                                        alt="Keratin hair treatment process using flat iron to smooth and straighten hair in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
@@ -237,10 +236,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Book Hair Botox Treatment in Hennur Road</h2>
+                                <h2 class="heading h4">Book Keratin Treatment in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Visit our salon near Hennur Road, Bangalore for professional Hair Botox Treatment
-                                    and experience smoother, healthier hair.
+                                    Visit our salon near Hennur Road, Bangalore for expert Keratin Hair Treatment and
+                                    enjoy smooth, manageable hair.
                                 </p>
                                 <div class="align-button-center">
                                     <!-- <div class="heading h4">Ready to look your absolute best for your
