third service added,

--- a/services.html
+++ b/services.html
@@ -407,7 +407,8 @@
                                             of Hair. Please Do Consult for an exact pricing.</p>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/hair-coloring.html"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/hair-colouring-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Hair color</a></h3>
                                         <div class="menu-item-wrap">
