--- a/services/hair-colouring-hennur-road-bangalore.html
+++ b/services/hair-colouring-hennur-road-bangalore.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair
+    <title>Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/keratin-treatment-hennur-road-bangalore">
-    <meta content="Get professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair. Ideal for unmanageable and damaged hair.
+    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/hair-colouring-hennur-road-bangalore">
+    <meta content="Professional hair colouring in Hennur Road, Bangalore including global colour, highlights, balayage and root touch-up. Safe, premium and long-lasting results.
 " name="description" />
-    <meta content="Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair
+    <meta content="Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage
 " property="og:title" />
-    <meta content="Get professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair. Ideal for unmanageable and damaged hair.
+    <meta content="Professional hair colouring in Hennur Road, Bangalore including global colour, highlights, balayage and root touch-up. Safe, premium and long-lasting results.
 " name="description
 " property="og:description" />
-    <meta content="Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair
+    <meta content="Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage
 " property="twitter:title" />
-    <meta content="Get professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair. Ideal for unmanageable and damaged hair.
+    <meta content="Professional hair colouring in Hennur Road, Bangalore including global colour, highlights, balayage and root touch-up. Safe, premium and long-lasting results.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Keratin Hair Treatment in Hennur Road, Bangalore | Smooth & Straight Hair" />
+    <meta property="og:image:alt" content="Hair Colouring in Hennur Road, Bangalore | Global, Highlights & Balayage" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -69,19 +69,19 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore",
-      "name": "Keratin Hair Treatment in Hennur Road, Bangalore",
-      "description": "Professional Keratin Hair Treatment in Hennur Road, Bangalore for smooth, straight and frizz-free hair.",
+      "@id": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore#webpage",
+      "url": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore",
+      "name": "Hair Colouring in Hennur Road, Bangalore",
+      "description": "Professional hair colouring services in Hennur Road, Bangalore including global colour, highlights, balayage and grey coverage.",
       "isPartOf": {
         "@id": "https://www.sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore#service",
-      "name": "Keratin Hair Treatment",
-      "description": "A professional hair smoothening and straightening treatment that reduces frizz and improves manageability.",
+      "@id": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore#service",
+      "name": "Hair Colouring",
+      "description": "Professional hair colouring service including global colour, highlights, balayage and root touch-up.",
       "areaServed": {
         "@type": "Place",
         "name": "Hennur Road, Bangalore"
@@ -93,7 +93,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -104,8 +104,8 @@
         {
           "@type": "ListItem",
           "position": 2,
-          "name": "Hair Keratin Treatment",
-          "item": "https://www.sugarcoatsalon.in/keratin-treatment-hennur-road-bangalore"
+          "name": "Hair Colouring",
+          "item": "https://www.sugarcoatsalon.in/hair-colouring-hennur-road-bangalore"
         }
       ]
     }
@@ -144,90 +144,98 @@
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
-                        <h1 class="heading h3 margin-bottom-60px">Keratin Hair Treatment in Hennur Road, Bangalore</h1>
+                        <h1 class="heading h3 margin-bottom-60px">Hair Colouring in Hennur Road, Bangalore | Global,
+                            Highlights & Balayage</h1>
                         <p class="paragraph medium-paragraph margin-bottom-20px">
-                            Keratin Hair Treatment is a professional smoothening treatment that reduces frizz,
-                            straightens hair, and restores lost keratin—making hair soft, manageable, and shiny.
+                            Professional hair colouring in Hennur Road, Bangalore including global colour, highlights,
+                            balayage and root touch-up. Safe, premium and long-lasting results.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/keratin-hair-treatment-before-after-hennur-road-bangalore.webp"
-                                        alt="Keratin hair treatment before and after result showing smooth, straight and frizz-free hair in Hennur Road Bangalore"
+                                        src="/assets/services/hair-colouring-before-after-balayage-hennur-road-bangalore.webp"
+                                        alt="Hair colouring before and after result showing balayage and smooth finish in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">What Is Keratin Hair Treatment?</h2>
-                                <div class="paragraph medium-paragraph">Keratin treatment replenishes natural keratin
-                                    protein in the hair shaft and seals the cuticle using heat. This helps reduce curls,
-                                    waves, and frizz while improving hair texture and shine.</div>
-                                <h2 class="heading h4">Benefits of Keratin Treatment</h2>
+                                <h2 class="heading h4">Hair Colouring in Hennur Road, Bangalore</h2>
+                                <div class="paragraph medium-paragraph">Looking for expert hair colouring in Hennur
+                                    Road, Bangalore? From natural shades to bold transformations, professional hair
+                                    colouring enhances your look while keeping your hair healthy and vibrant.</div>
+                                <h2 class="heading h4">Professional Hair Colour Services We Offer</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Long-lasting smooth and straight hair</li>
-                                    <li>Reduces frizz and volume</li>
-                                    <li>Makes hair soft and manageable</li>
-                                    <li>Adds shine and polish</li>
-                                    <li>Ideal for thick, curly, or wavy hair</li>
-                                </ul>
-                                <h2 class="heading h4">Who Should Opt for Keratin Treatment?</h2>
-                                <ul class="paragraph medium-paragraph">
-                                    <li>Frizzy or unmanageable hair</li>
-                                    <li>Curly or wavy hair</li>
-                                    <li>Hair damaged by heat or colouring</li>
-                                    <li>Anyone wanting straight-looking hair</li>
-                                </ul>
-                                <h2 class="heading h4">Keratin Treatment Process</h2>
-                                <ul class="paragraph medium-paragraph">
-                                    <li>Step 1: Deep cleansing shampoo</li>
-                                    <li>Step 2: Keratin product application</li>
-                                    <li>Step 3: Heat sealing using flat iron</li>
-                                    <li>Step 4: Final rinse and styling</li>
+                                    <li>Global hair colour</li>
+                                    <li>Root touch-up</li>
+                                    <li>Highlights & lowlights</li>
+                                    <li>Balayage & ombré</li>
+                                    <li>Grey coverage</li>
                                 </ul>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Duration: 2-3 hours<br>Results last: 5-7 months (with proper home care)
+                                    All colours are selected based on skin tone, hair condition, and lifestyle.
                                 </p>
+                                <h2 class="heading h4">Why Choose Professional Hair Colouring?</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Even and long-lasting colour</li>
+                                    <li>Minimal hair damage</li>
+                                    <li>Proper pre- and post-care</li>
+                                    <li>Custom shade consultation</li>
+                                    <li>Salon-grade products</li>
+                                </ul>
+                                <h2 class="heading h4">Who Should Opt for Hair Colouring?</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Grey hair coverage</li>
+                                    <li>Style refresh or makeover</li>
+                                    <li>Proper pre- and post-care</li>
+                                    <li>Enhancing natural hair tone</li>
+                                    <li>Fashion or trend-based colouring</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Keratin vs Hair Botox</h2>
-                                <div class="paragraph medium-paragraph">Keratin is a straightening and smoothing
-                                    treatment, while Hair Botox focuses on repair and hydration.
-                                    Keratin is ideal if you want long-lasting straight hair. <a
-                                        href="/blogs/keratin-vs-hair-botox" class="menu-section-link-blogs">Read
-                                        more about Keratin vs Botox
-                                        Treatment
-                                        for hair.</a></div>
-                                <h2 class="heading h4">Aftercare Tips for Keratin</h2>
+                                <h2 class="heading h4">Hair Colouring Process</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Use sulphate-free shampoo. Preferably for Keratin aftercare.</li>
+                                    <li>Step 1: Colour consultation</li>
+                                    <li>Step 2: Strand test & preparation</li>
+                                    <li>Step 3: Colour application</li>
+                                    <li>Step 4: Wash, condition & styling</li>
+                                </ul>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Duration: 1-3 hours(depends on service)
+                                </p>
+                                <h2 class="heading h4">Aftercare Tips for Coloured Hair</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Use colour-safe, sulphate-free shampoo</li>
                                     <li>Avoid frequent washing</li>
-                                    <li>Limit heat styling</li>
-                                    <li>Follow stylist-recommended products</li>
+                                    <li>Deep conditioning regularly</li>
+                                    <li>Hair spa for rejuvenation or colour protection</li>
+                                    <li>Heat protection is essential</li>
                                 </ul>
                                 <h2 class="heading h4">FAQs – Keratin Treatment in Hennur Road</h2>
-                                <h3 class="paragraph large-paragraph">Is keratin treatment safe?</h3>
+                                <h3 class="paragraph large-paragraph">Is hair colouring safe?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, when done professionally and with proper aftercare.
+                                    Yes, when done professionally using quality products and proper techniques.
                                 </p>
-                                <h3 class="paragraph large-paragraph">Does keratin permanently straighten hair?</h3>
+                                <h3 class="paragraph large-paragraph">How long does hair colour last?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    No, it’s semi-permanent relaxed smooth look and gradually fades.
+                                    Depends on the shade and maintenance. Darker shades last longer whereas lighter
+                                    shades and highlights fade over time. Proper home care can increase the duration of
+                                    this.
                                 </p>
-                                <h3 class="paragraph large-paragraph">How long does keratin treatment last?</h3>
+                                <h3 class="paragraph large-paragraph">Can I colour damaged hair?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Typically 3–6 months depending on hair care routine.
+                                    Yes, after hair assessment and with suitable treatments.
                                 </p>
                             </div>
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/keratin-treatment-process-flat-iron-hennur-road-bangalore.webp"
-                                        alt="Keratin hair treatment process using flat iron to smooth and straighten hair in Hennur Road Bangalore"
+                                        src="/assets/services/hair-colouring-process-highlights-foil-hennur-road-bangalore.webp"
+                                        alt="Hair colouring process with highlights and foil application at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
@@ -236,10 +244,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Book Keratin Treatment in Hennur Road</h2>
+                                <h2 class="heading h4">Book Hair Colouring in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Visit our salon near Hennur Road, Bangalore for expert Keratin Hair Treatment and
-                                    enjoy smooth, manageable hair.
+                                    Visit our salon near Hennur Road, Bangalore for expert hair colouring services
+                                    tailored to your style.
                                 </p>
                                 <div class="align-button-center">
                                     <!-- <div class="heading h4">Ready to look your absolute best for your
@@ -279,7 +287,7 @@
                         href="/contact" class="footer-link">Contact Us</a></div>
                 <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                     <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
-                        Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
+                        Treatment</a><a href="/services/hair-colouring-hennur-road-bangalore"
                         class="footer-link-2">Keratin
                         Treatment</a><a href="/services/haircut-styling.html" class="footer-link-2">Haircut &
                         Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
